--- a/packages/bolt/bolt.html
+++ b/packages/bolt/bolt.html
@@ -5,15 +5,16 @@
 </head>
 
 <body>
-  
+  <h1>Bolt Test Page</h1>
+
   <button class="c-bolt-button">Button tag</button>
   <a class="c-bolt-button">Anchor tag</a>
-  
+
   <hr>
-  
+
   <button class="c-button">Non Bolt Button - Button Tag</button>
   <a class="c-button"> tag</a>
-  
+
 </body>
 
 
