WIP: headline quote

--- a/bolt-website/pattern-lab/patterns/01-atoms-bolt-headline-examples-headline-kitchen-sink/01-atoms-bolt-headline-examples-headline-kitchen-sink.markup-only.html
+++ b/bolt-website/pattern-lab/patterns/01-atoms-bolt-headline-examples-headline-kitchen-sink/01-atoms-bolt-headline-examples-headline-kitchen-sink.markup-only.html
@@ -79,6 +79,21 @@
     Medium is the body (base) font size, therefore it is not a size for the headlines.
   </p>
   <h1 class="c-bolt-headline c-bolt-headline--xxxlarge">
+    <span class="c-bolt-headline__quote">Headline with Quotes</span>
+  </h1>
+  <h2 class="c-bolt-headline c-bolt-headline--xxlarge">
+    <span class="c-bolt-headline__quote">Headline with Quotes</span>
+  </h2>
+  <h3 class="c-bolt-headline c-bolt-headline--xlarge">
+    <span class="c-bolt-headline__quote">Headline with Quotes</span>
+  </h3>
+  <h4 class="c-bolt-headline c-bolt-headline--large">
+    <span class="c-bolt-headline__quote">Headline with Quotes</span>
+  </h4>
+  <h5 class="c-bolt-headline c-bolt-headline--small">
+    <span class="c-bolt-headline__quote">Headline with Quotes</span>
+  </h5>
+  <h1 class="c-bolt-headline c-bolt-headline--xxxlarge">
     <span class="c-bolt-headline__text">Headline with Line</span>
     <hr class="c-bolt-headline__line">
   </h1>
